Fixed issue with overlapping headline
Turns out that the height of the container was the issue.

--- a/src/containers/LandingPage/LandingPage.css
+++ b/src/containers/LandingPage/LandingPage.css
@@ -25,7 +25,7 @@
   display: flex;
   flex-direction: column;
   min-height: 300px;
-  height: 20.5vh;
+  height: 60.5vh;
   max-height: 600px;
   padding: 0;
 
